# MexicoGame

./: CMakeLists.txt  main.cpp
include/: Player.hpp  Utility.hpp
players/: DummyPlayer.hpp
src/: GameMaster.hpp
